// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`each stack in an app gets its own publisher instance 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eArtifactHashF641EA97": Object {
      "Description": "Artifact hash for asset \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3Bucket0F09F618": Object {
      "Description": "S3 bucket for asset \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119": Object {
      "Description": "S3 key for asset version \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45ArtifactHash01BA9AF6": Object {
      "Description": "Artifact hash for asset \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3BucketB0489219": Object {
      "Description": "S3 bucket for asset \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6": Object {
      "Description": "S3 key for asset version \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3BucketB0489219",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF": Object {
      "DependsOn": Array [
        "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509",
        "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3Bucket0F09F618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Custom metrics publisher for SecretsManager Secrets (MonitoringCDKConstructs)",
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaLogRetentionBBD27A2A": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
              },
            ],
          ],
        },
        "RetentionInDays": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "secretsmanager:DescribeSecret",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "cloudwatch:PutMetricData",
              "Condition": Object {
                "StringEquals": Object {
                  "cloudwatch:namespace": "SecretsManager",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509",
        "Roles": Array [
          Object {
            "Ref": "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret1A5D12B4E": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 * * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "Input": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"secretId\\":\\"",
                  Object {
                    "Ref": "Secret1C2786A59",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret1AllowEventRuleStack1ScopeSecretsManagerMetricsPublisherLambda436901E8FB7C2A5E": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherRuleForSecret1A5D12B4E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "Secret1C2786A59": Object {
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
    },
  },
}
`;

exports[`each stack in an app gets its own publisher instance 2`] = `
Object {
  "Parameters": Object {
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eArtifactHashF641EA97": Object {
      "Description": "Artifact hash for asset \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3Bucket0F09F618": Object {
      "Description": "S3 bucket for asset \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119": Object {
      "Description": "S3 key for asset version \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45ArtifactHash01BA9AF6": Object {
      "Description": "Artifact hash for asset \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3BucketB0489219": Object {
      "Description": "S3 bucket for asset \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6": Object {
      "Description": "S3 key for asset version \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3BucketB0489219",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF": Object {
      "DependsOn": Array [
        "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509",
        "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3Bucket0F09F618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Custom metrics publisher for SecretsManager Secrets (MonitoringCDKConstructs)",
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaLogRetentionBBD27A2A": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
              },
            ],
          ],
        },
        "RetentionInDays": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "secretsmanager:DescribeSecret",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "cloudwatch:PutMetricData",
              "Condition": Object {
                "StringEquals": Object {
                  "cloudwatch:namespace": "SecretsManager",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509",
        "Roles": Array [
          Object {
            "Ref": "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret1A5D12B4E": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 * * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "Input": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"secretId\\":\\"",
                  Object {
                    "Ref": "Secret1C2786A59",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret1AllowEventRuleStack2ScopeSecretsManagerMetricsPublisherLambda6B464B59B90AD150": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherRuleForSecret1A5D12B4E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret2AllowEventRuleStack2ScopeSecretsManagerMetricsPublisherLambda6B464B5927FCE56A": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherRuleForSecret2FFD62269",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret2FFD62269": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 * * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "Input": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"secretId\\":\\"",
                  Object {
                    "Ref": "Secret244EA3BB5",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "Secret1C2786A59": Object {
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
    },
    "Secret244EA3BB5": Object {
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
    },
  },
}
`;

exports[`snapshot test 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eArtifactHashF641EA97": Object {
      "Description": "Artifact hash for asset \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3Bucket0F09F618": Object {
      "Description": "S3 bucket for asset \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119": Object {
      "Description": "S3 key for asset version \\"8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477e\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45ArtifactHash01BA9AF6": Object {
      "Description": "Artifact hash for asset \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3BucketB0489219": Object {
      "Description": "S3 bucket for asset \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
    "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6": Object {
      "Description": "S3 key for asset version \\"f3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A": Object {
      "DependsOn": Array [
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3BucketB0489219",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf3b4457410e8875dce33608b6046e993c1ba6def4d00e9de1ed9681517a35e45S3VersionKeyE07CADE6",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:PutRetentionPolicy",
                "logs:DeleteRetentionPolicy",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB",
        "Roles": Array [
          Object {
            "Ref": "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF": Object {
      "DependsOn": Array [
        "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509",
        "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3Bucket0F09F618",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters8ec3a679d4292e38eee6ef6dd152fb3de8b8f180096ef7e9e9eebae1db02477eS3VersionKey3B955119",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "Custom metrics publisher for SecretsManager Secrets (MonitoringCDKConstructs)",
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaLogRetentionBBD27A2A": Object {
      "Properties": Object {
        "LogGroupName": Object {
          "Fn::Join": Array [
            "",
            Array [
              "/aws/lambda/",
              Object {
                "Ref": "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
              },
            ],
          ],
        },
        "RetentionInDays": 1,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A",
            "Arn",
          ],
        },
      },
      "Type": "Custom::LogRetention",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "secretsmanager:DescribeSecret",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": "cloudwatch:PutMetricData",
              "Condition": Object {
                "StringEquals": Object {
                  "cloudwatch:namespace": "SecretsManager",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleDefaultPolicy2F7AC509",
        "Roles": Array [
          Object {
            "Ref": "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ScopeSecretsManagerMetricsPublisherLambdaServiceRoleEC4B8B08": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret1A5D12B4E": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 * * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "Input": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"secretId\\":\\"",
                  Object {
                    "Ref": "Secret1C2786A59",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret1AllowEventRuleScopeSecretsManagerMetricsPublisherLambda0D36FFC4CE1F11A4": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherRuleForSecret1A5D12B4E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret2AllowEventRuleScopeSecretsManagerMetricsPublisherLambda0D36FFC445562ECF": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherRuleForSecret2FFD62269",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret2FFD62269": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 * * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "Input": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"secretId\\":\\"",
                  Object {
                    "Ref": "Secret244EA3BB5",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret360EACBF8": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 * * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
                "Arn",
              ],
            },
            "Id": "Target0",
            "Input": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "{\\"secretId\\":\\"",
                  Object {
                    "Ref": "Secret30C3714C1",
                  },
                  "\\"}",
                ],
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ScopeSecretsManagerMetricsPublisherRuleForSecret3AllowEventRuleScopeSecretsManagerMetricsPublisherLambda0D36FFC41F347C6F": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherLambdaD18CA1CF",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ScopeSecretsManagerMetricsPublisherRuleForSecret360EACBF8",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "ScopeTestSecret1DaysSinceUpdateCritical9B2CE120": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Number of days since update is too high.",
        "AlarmName": "Test-Secret1-DaysSinceUpdate-Critical",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Days",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "SecretName",
                    "Value": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Fn::Select": Array [
                              0,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret1C2786A59",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                          Object {
                            "Fn::Select": Array [
                              1,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret1C2786A59",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      ],
                    },
                  },
                ],
                "MetricName": "DaysSinceLastChange",
                "Namespace": "SecretsManager",
              },
              "Period": 86400,
              "Stat": "Maximum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 60,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestSecret1DaysSinceUpdateWarningE904F18E": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Number of days since update is too high.",
        "AlarmName": "Test-Secret1-DaysSinceUpdate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Days",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "SecretName",
                    "Value": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Fn::Select": Array [
                              0,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret1C2786A59",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                          Object {
                            "Fn::Select": Array [
                              1,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret1C2786A59",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      ],
                    },
                  },
                ],
                "MetricName": "DaysSinceLastChange",
                "Namespace": "SecretsManager",
              },
              "Period": 86400,
              "Stat": "Maximum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 30,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestSecret2DaysSinceUpdateWarning8E036A7A": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Number of days since update is too high.",
        "AlarmName": "Test-Secret2-DaysSinceUpdate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Days",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "SecretName",
                    "Value": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Fn::Select": Array [
                              0,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret244EA3BB5",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                          Object {
                            "Fn::Select": Array [
                              1,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret244EA3BB5",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      ],
                    },
                  },
                ],
                "MetricName": "DaysSinceLastRotation",
                "Namespace": "SecretsManager",
              },
              "Period": 86400,
              "Stat": "Maximum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 30,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ScopeTestSecret3DaysSinceUpdateWarning71C58659": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Number of days since update is too high.",
        "AlarmName": "Test-Secret3-DaysSinceUpdate-Warning",
        "ComparisonOperator": "GreaterThanThreshold",
        "DatapointsToAlarm": 3,
        "EvaluationPeriods": 3,
        "Metrics": Array [
          Object {
            "Id": "m1",
            "Label": "Days",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "SecretName",
                    "Value": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Fn::Select": Array [
                              0,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret30C3714C1",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                          Object {
                            "Fn::Select": Array [
                              1,
                              Object {
                                "Fn::Split": Array [
                                  "-",
                                  Object {
                                    "Fn::Select": Array [
                                      6,
                                      Object {
                                        "Fn::Split": Array [
                                          ":",
                                          Object {
                                            "Ref": "Secret30C3714C1",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      ],
                    },
                  },
                ],
                "MetricName": "DaysSinceLastChange",
                "Namespace": "SecretsManager",
              },
              "Period": 86400,
              "Stat": "Maximum",
            },
            "ReturnData": true,
          },
        ],
        "Threshold": 30,
        "TreatMissingData": "missing",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Secret1C2786A59": Object {
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
    },
    "Secret244EA3BB5": Object {
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
    },
    "Secret30C3714C1": Object {
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
    },
  },
}
`;
